# Computational-Discrete-Mathematics

./: CMakeLists.txt
Relations/: Transitive_Closuere_Alg.cpp
