cmake_minimum_required(VERSION 3.29)
project(Computational_Discrete_Mathematics)

set(CMAKE_CXX_STANDARD 14)

add_executable(Computational_Discrete_Mathematics
    .idea/.gitignore
    .idea/Computational-Discrete-Mathematics.iml
    .idea/editor.xml
    .idea/modules.xml
    .idea/vcs.xml
    .idea/workspace.xml
    Relations/Transitive_Closuere_Alg.cpp)
